# command-line-rust

./: Cargo.toml
01_hello/: Cargo.toml
01_hello/tests/: cli.rs
02_echor/: Cargo.toml  mk-outs.sh
02_echor/src/: main.rs
02_echor/tests/: cli.rs
02_echord/: Cargo.toml
02_echord/src/: main.rs
02_echord/tests/: cli.rs
03_catr/: Cargo.toml
03_catr/src/: lib.rs
03_catrd/: Cargo.toml
03_catrd/src/: lib.rs  main.rs
03_catrd/tests/: cli.rs
04_headr/: Cargo.toml
04_headr/src/: lib.rs
04_headr/tests/: cli.rs
04_headrd/: Cargo.toml
04_headrd/src/: lib.rs  main.rs
04_headrd/tests/: cli.rs
05_wcr/: Cargo.toml
05_wcr/src/: lib.rs
05_wcrd/: Cargo.toml
05_wcrd/src/: lib.rs  main.rs
05_wcrd/tests/: cli.rs
06_uniqr/: Cargo.toml
06_uniqr/src/: lib.rs
06_uniqrd/: Cargo.toml
06_uniqrd/src/: lib.rs  main.rs
06_uniqrd/tests/: cli.rs
07_findr/: Cargo.toml
07_findr/src/: lib.rs
07_findr/tests/: cli.rs
07_findrd/: Cargo.toml
07_findrd/src/: lib.rs  main.rs
07_findrd/tests/: cli.rs
08_cutr/: Cargo.toml
08_cutr/src/: lib.rs
08_cutr/tests/: cli.rs
09_grepr/: Cargo.toml
09_grepr/src/: lib.rs
10_commr/: Cargo.toml
10_commr/src/: lib.rs
10_commr/tests/: cli.rs
11_tailr/: Cargo.toml
11_tailr/src/: lib.rs
11_tailr/tests/: cli.rs
12_fortuner/: Cargo.toml
12_fortuner/src/: lib.rs
13_calr/: Cargo.toml
13_calr/src/: lib.rs
13_calr/tests/: cli.rs
