[workspace]
members = [
    "01_hello",
    "02_echor",
    "02_echord",
    "03_catr",
    "03_catrd",
    "04_headr",
    "04_headrd",
    "05_wcr",
    "05_wcrd",
    "06_uniqr",
    "06_uniqrd",
    "07_findr",
    "07_findrd",
    "08_cutr",
    "09_grepr",
    "10_commr",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
walkdir = "2.5.0"
regex = "1.10.4"
sys-info = "0.9.1"

assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
tempfile = "3.10.1"
