[workspace]
members = [
    "01_hello",
    "02_echor",
    "02_echord",
    "03_catr",
    "03_catrd",
    "04_headr",
    "04_headrd",
    "05_wcr",
    "05_wcrd",
    "06_uniqr",
    "06_uniqrd",
    "07_findr",
    "07_findrd",
    "08_cutr",
    "09_grepr",
    "10_commr",
    "11_tailr",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
walkdir = "2.5.0"
regex = "1.10.4"
sys-info = "0.9.1"
num = "0.4.3"
once_cell = "1.19.0"

assert_cmd = "2.0.14"
predicates = "3.1.0"
rand = "0.8.5"
tempfile = "3.10.1"
rstest = "0.19.0"