[package]
name = "findrd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
walkdir.workspace = true
regex.workspace = true
log = "0.4.21"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rand.workspace = true
