[package]
name = "calr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
chrono.workspace = true
itertools.workspace = true
ansi_term.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
